Fix overflow of code

--- a/assets/main.css
+++ b/assets/main.css
@@ -122,6 +122,7 @@ pre {
   padding: 5px;
   background-color: #EEEEEE;
   border: 1px solid #DDDDDD;
+  overflow-x: scroll;
 }
 
 :not(pre) > code {
